@@ -1,3 +1,11 @@
+2007-01-14  Daniel Elstner  <daniel.kitta@gmail.com>
+
+	* src/filetree.cc (regexxer_create_file_tree): Move function to
+	the global namespace.  Putting it inside an anonymous namespace
+	just obfuscated the code, as this function is exported for the
+	world to see.
+	* src/statusline.cc (regexxer_create_status_line): Likewise.
+
 2007-01-13  Daniel Elstner  <daniel.kitta@gmail.com>
 
 	* MAINTAINERS: Add file for the benefit of sysadmin tools.
